Add like and dislike for posts
